# rusty-angular

./: .gitignore  Cargo.toml  README.md  angular.json  package-lock.json  package.json
projects/ng-rusty/src/: index.html  styles.scss
projects/ng-rusty/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
projects/ng-rusty/src/app/basic-calculator/: basic-calculator.component.html  basic-calculator.component.ts
projects/ng-rusty/src/app/bmi-calculator/: bmi-calculator.component.html  bmi-calculator.component.ts
projects/ng-rusty/src/app/dashboard/: dashboard.component.html  dashboard.component.ts
projects/ng-rusty/src/app/indexdb/: indexdb.component.html  indexdb.component.spec.ts  indexdb.component.ts
projects/ng-rusty/src/app/services/: dataframe.service.spec.ts  dataframe.service.ts
src/: main.rs  vecdata.rs
