[package]
name = "rusty-angular"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
# "s" for small size | "z" for small size with speed cost
# opt-level = "z"

# optimize for speed
lto = true